--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "socket.io": "~0.9.13",
     "superagent": "~0.12.4",
     "yaml-config": "~0.2.1",
-    "express-namespace": "~0.1.1"
+    "express-namespace": "~0.1.1",
+    "passport-facebook": "~0.1.5",
+    "connect-flash": "~0.1.0"
   },
   "scripts": {
     "install": "node node_modules/coffee-script/bin/cake build",
